2000-07-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.cc: (SocketNumericAddress) use SocketAddrLen, this fixes
	  a problem with solaris8.
	* Http.cc: set real_pos=0 when no_ranges==true.
	* commands.cc: fix `open -u ... -p ... bookmark_name'.

2000-07-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: (SendArrayInfoRequests) new method;
	  fix gcc-2.96 error; fix a coredump; add asserts.
	* LocalAccess.cc: fix rels.

2000-07-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: don't query for accept* if hftp.
	* pgetJob.cc: fix deadlock.

2000-07-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix error with gcc-2.96.

2000-07-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix potential memory leak.

2000-07-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* lftp.cc, resource.cc: ask for password for ftp:proxy.
	* Http.cc: workaround for redirections without "\n\n";
	  check if all data arrived before disconnecting; set body_size=0
	  on "204 No Content"; handle "100 Continue".

2000-07-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: (FileAccess::ClassInit) new function;
	  move calls of Ftp::ClassInit there.
	* lftp.cc: call FileAccess::ClassInit.
	* Filter.cc, Filter.h: add stderr_to_stdout flag.
	* FtpDirList.cc, FtpListInfo.cc, FtpSplitList.cc, HttpDir.cc:
	  fix printing for off_t.

2000-07-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: fix compilation problem on IRIX.

2000-06-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: don't Open NULL file, use "".

2000-06-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* MirrorJob.cc: use lstat instead of stat on local file before mkdir.
	* Job.cc, Job.h: (FindAnyChild) new method.
	* CmdExec.cc, CmdExec.h, commands.cc: support for `wait all'.
	* ftpclass.cc: fix RETR reply handling (was broken in A00625 snapshot).
	* Http.cc: don't use |= on bool.
